<resources>
    <string name="app_name">Weather App</string>
    <string name="cities">Cities</string>
    <string name="cureent_weather">Current Weather</string>
    <string name="check_forecast">Check ForeCast</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_max">Temperature Max</string>
    <string name="temperature_min">Temperature Min</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_degree">Wind Degree</string>
    <string name="cloudiness">Cloudiness</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>