<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".CurrentWeatherFragment" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonForeCast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/check_forecast" />

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:width="200sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/temperature" />

    <TextView
        android:id="@+id/textViewTempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

<!--    Temperature Max-->

    <TextView
        android:id="@+id/textViewTempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTemp"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:width="200sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/temperature_max" />

    <TextView
        android:id="@+id/textViewTempMaxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTemp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

<!--    Temperature Min-->

    <TextView
        android:id="@+id/textViewTempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempMax"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:width="200sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/temperature_min" />

    <TextView
        android:id="@+id/textViewTempMinValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempMax"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

<!--    Description-->
    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempMin"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:width="200sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/description" />

    <TextView
        android:id="@+id/textViewDescValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTempMin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

<!--    Humidity-->

    <TextView
        android:id="@+id/textViewHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDesc"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:width="200sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/textViewHumidityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDesc"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

<!--    Wind Speed-->
    <TextView
        android:id="@+id/textViewWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHumidity"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:width="200sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/wind_speed" />

    <TextView
        android:id="@+id/textViewWindSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHumidity"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

<!--    Wind Degree-->
    <TextView
        android:id="@+id/textViewWindDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWindSpeed"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:width="200sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/wind_degree" />

    <TextView
        android:id="@+id/textViewWindDegreeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWindSpeed"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

<!--    Cloudiness-->

    <TextView
        android:id="@+id/textViewCloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWindDegree"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:width="200sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/cloudiness" />

    <TextView
        android:id="@+id/textViewCloudinessValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWindDegree"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />


</RelativeLayout>